<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:id="@+id/tvOrdersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_title"
            android:textSize="@dimen/text_size_title"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginBottom="@dimen/spacing_medium" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchViewOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:background="@android:color/white"
            android:elevation="@dimen/elevation_card"
            app:queryHint="@string/hint_search_order" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewOrders"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/spacing_large" />

        <TextView
            android:id="@+id/tvEmptyOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_orders_list"
            android:textSize="@dimen/text_size_body"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCreateOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/spacing_large"
        android:contentDescription="@string/btn_create_order"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
